--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
+# Core Dependencies
+streamlit>=1.31.0
+python-dotenv>=1.0.0
 
-streamlit==1.31.0
-python-dotenv==1.0.0
-groq==0.4.2
-torch==2.1.2
-transformers==4.35.2
-tokenizers==0.15.0
-sentencepiece==0.1.99
-accelerate==0.25.0
-peft==0.7.1
-numpy==1.24.3
-huggingface-hub==0.19.4
-safetensors==0.4.1
-protobuf==3.20.3
-filelock==3.13.1
-requests==2.31.0
-tqdm==4.66.1
-psutil==5.9.6
+# API Client
+groq>=0.4.2
+
+# Machine Learning & Transformers (Latest compatible versions)
+torch>=2.5.0
+transformers>=4.40.0
+tokenizers>=0.19.0
+sentencepiece>=0.2.0
+accelerate>=0.30.0
+
+# PEFT for Fine-tuned Models
+peft>=0.10.0
+
+# Additional ML Dependencies
+numpy>=1.24.0
+huggingface-hub>=0.20.0
+safetensors>=0.4.0
+
+# Utilities
+protobuf>=3.20.0
+filelock>=3.13.0
+requests>=2.31.0
+tqdm>=4.66.0
+
+# For better performance
+psutil>=5.9.0
