--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,20 @@
-# Core Dependencies
 streamlit>=1.31.0
-python-dotenv>=1.0.0
-
-# API Client
 groq>=0.4.2
-
-# Machine Learning & Transformers (Latest compatible versions)
-torch>=2.5.0
-transformers>=4.40.0
-tokenizers>=0.19.0
-sentencepiece>=0.2.0
-accelerate>=0.30.0
-
-# PEFT for Fine-tuned Models
-peft>=0.10.0
-
-# Additional ML Dependencies
+Pillow>=10.0.0
+torch>=2.1.0
+torchvision>=0.16.0
+tensorflow>=2.13.0
+transformers>=4.35.0
+tokenizers>=0.15.0
+sentencepiece>=0.1.99
+accelerate>=0.25.0
+peft>=0.7.0
 numpy>=1.24.0
-huggingface-hub>=0.20.0
+huggingface-hub>=0.19.0
 safetensors>=0.4.0
-
-# Utilities
 protobuf>=3.20.0
 filelock>=3.13.0
 requests>=2.31.0
 tqdm>=4.66.0
-
-# For better performance
 psutil>=5.9.0
+python-dotenv>=1.0.0
